--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <script src="/js/Movie.js"></script>
     <script src="/js/Auditorium.js"></script>
     <script src="/js/Showtime.js"></script>
+    <script src="/js/Ticket.js"></script>
     <script src="/js/test.js"></script>
   </body>
 </html>
