--- a/www/index.html
+++ b/www/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Bio Bokning</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Hello!</h1>
+    <div id="row-wrapper" style="text-align: center">
+
+    </div>
     <script src="/js/jquery.js"></script>
     <script src="/js/REST.js"></script>
     <script src="/js/Movie.js"></script>
@@ -20,5 +25,6 @@
     <script src="/js/loadManually/Router.js"></script>
     <script src="/autoload-js-and-templates"></script>
     <script src="/js/loadManually/start.js"></script>
-  </body>
+</body>
+
 </html>
