Add seats layout

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/REST.js"></script>
     <script src="/js/Movie.js"></script>
-    <script src="/js/Auditorium.js"></script>
+    <!-- <script src="/js/Auditorium.js"></script> -->
     <script src="/js/Showtime.js"></script>
     <script src="/js/test.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
