--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,8 @@
    <script src="/js/loadManually/Router.js"></script>
    <script src="/autoload-js-and-templates"></script>
    <script src="/js/loadManually/start.js"></script>
-   <script src="/js/ShowtimeShuffle.js"></script>
-   <script src="/js/test.js"></script>
+   <!-- <script src="/js/ShowtimeShuffle.js"></script>
+   <script src="/js/test.js"></script> -->
 </body>
 
 </html>
